--- a/.gitmodules
+++ b/.gitmodules
@@ -6,6 +6,7 @@
 	path = powerlevel10k
 	url = git://github.com/romkatv/powerlevel10k.git
 	branch = master
+	depth = 1
 [submodule "zsh-syntax-highlighting"]
 	path = zsh-syntax-highlighting
 	url = git://github.com/zsh-users/zsh-syntax-highlighting.git
