--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -2,17 +2,18 @@ env:
   TERM: xterm-256color
 font:
   normal:
-    family: "UbuntuMono Nerd Font"
+    family: "UbuntuMono Nerd Font Mono"
     style: Regular
   bold:
-    family: "UbuntuMono Nerd Font"
+    family: "UbuntuMono Nerd Font Mono"
     style: Bold
   italic:
-    family: "UbuntuMono Nerd Font"
+    family: "UbuntuMono Nerd Font Mono"
     style: Italic
   bold_italic:
-    family: "UbuntuMono Nerd Font"
+    family: "UbuntuMono Nerd Font Mono"
     style: Bold Italic
+  size: 16
   use_thin_strokes: true
 
 colors:
